--- a/style.css
+++ b/style.css
@@ -5,11 +5,75 @@
 }
 
 .nav {
-	background-color: #F58282;
+	background-color: #71EEB8;
 	width: 100%;
+	height:30pt;
+	font-size: 20pt;
+	text-align: center;
+	padding-top: 5pt;
+	
+	border: solid #3F000F;
+	border-width:4pt;
 }
 .b {
 	font-family: 'Copperplate', sans-serif;
+}
+
+.head {
+/*	position:relative;
+	height: 150pt;
+	max-width: 100%;
+	margin: 0 auto !important; 
+	float: none !important; 
+	background-image: url(img/headerpics/pineapple.jpg);
+	background-size:cover;*/
+position:relative;
+	height: 150pt;
+	background-image: url(img/headerpics/pineapple.jpg);
+	background-size:cover;
+	border-bottom: solid #3F000F;
+	border-width:4pt;
+	margin-bottom: 20pt;
+}
+
+.nav > a {
+    display: inline-block;
+    display: -moz-inline-box;
+    *display: inline; /* For IE7 */
+    zoom: 1; /* Trigger hasLayout */
+    width: 10%;
+    text-align: center;
+color: #3F000F;
+}
+	
+
+.head2 {
+
+	color: white;
+/*	width: 80%; 
+	margin-left: 10%;
+	margin-top: 35pt;*/
+		position: absolute; 
+
+	max-height: 50%;
+	max-width: 80%;
+	margin: auto !important; 
+	float: none !important; 
+	top: 0; left: 0; right: 0; bottom: 0;
+		display: flex;
+  justify-content: center;
+  align-items: center;
+/*	float: none !important;*/
+
+	font-size: 20pt;
+	font-weight: 200;
+/*	font-family: 'Georgia', sans-serif;*/
+	text-align: center;
+	vertical-align: center;
+	border: solid #71EEB8;
+	border-width:4pt;
+
+	background-color: rgba(0,0,0, 0.6);
 }
 
 /*.header {
